--- a/blog/package.json
+++ b/blog/package.json
@@ -13,5 +13,8 @@
     "element-ui": "^2.13.2",
     "nuxt": "^2.14.6"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10.1.0"
+  }
 }
