--- a/blog/package.json
+++ b/blog/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "element-ui": "^2.13.2",
-    "nuxt": "^2.14.6"
+    "nuxt": "^2.14.6",
+    "vue-markdown": "^2.2.4"
   },
   "devDependencies": {
     "node-sass": "^5.0.0",
